Add a Header Partial and test the route

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -9,13 +9,14 @@
   <title>TinyApp</title>
 </head>
 <body>
+  <%- include('partials/_header') %>
   <main style="margin: 1em;">
     <h3>My URLs</h3>
     <table class="table">
       <thead>
         <tr>
           <th scope="col"><a href="#">Short URL</a></th>
-          <th scope="col"><a href="#">URL</a></th>
+          <th scope="col"><a href="#">Long URL</a></th>
         </tr>
       </thead>
       <tbody>
