--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -10,5 +10,13 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
+    <span class="d-flex justify-content-end">
+      <h2><%= username %></h2>
+      <form action="/login" method="POST" >
+        <label for="user"></label>
+        <input type="text" name="username" placeholder="username">
+        <button type="submit" class="btn btn-success">Login</button>
+      </form>
+    </span>
   </nav>
 </header>
