--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,7 +1,8 @@
 <header>
   <nav class="navbar navbar-expand-md navbar-dark bg-success">
     <a class="navbar-brand" href="/urls">TinyApp</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -11,12 +12,19 @@
       </div>
     </div>
     <span class="d-flex justify-content-end">
-      <h2><%= username %></h2>
-      <form action="/login" method="POST" >
+      <% if (!username) { %>
+      <form action="/login" method="POST">
         <label for="user"></label>
         <input type="text" name="username" placeholder="username">
         <button type="submit" class="btn btn-success">Login</button>
       </form>
+      <% } else { %>
+      <form action="/logout" method="POST">
+        <label for="user"></label>
+        <a class="navbar-brand" href="/urls"><%= `Signed in user: ${username}` %></a>
+        <button type="submit" class="btn btn-success">Logout</button>
+      </form>
+      <% } %>
     </span>
   </nav>
 </header>
