--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -12,7 +12,7 @@
       </div>
     </div>
     <span class="d-flex justify-content-end">
-      <% if (!username) { %>
+      <% if (!user) { %>
       <form action="/login" method="POST">
         <label for="user"></label>
         <input type="text" name="username" placeholder="username">
@@ -21,7 +21,7 @@
       <% } else { %>
       <form action="/logout" method="POST">
         <label for="user"></label>
-        <a class="navbar-brand" href="/urls"><%= `Signed in user: ${username}` %></a>
+        <a class="navbar-brand" href="/urls"><%= `Signed in user: ${user.email}` %></a>
         <button type="submit" class="btn btn-success">Logout</button>
       </form>
       <% } %>
