--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -10,21 +10,33 @@
 
 <body>
   <%- include('partials/_header') %>
-  <div class="card text-center">
-    <div class="card-header"></div>
-    <div class="card-body">
-      <h5 class="card-title">TinyURL for: <a href="#"><%= longURL %></a></h5>
-      <p class="card-text">Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a></p>
+  <% if (!user) { %>
+  <main style="margin: 1em;">
+    <div class="card text-center">
+      <div class="card-body">
+        <p>PLease <a href="/login">login</a> or <a href="/register">Register first</a></p>
+      </div>
     </div>
-    <div class="card-footer text-muted">
-      <h3>Edit</h3>
-      <form method='POST' action='/urls/<%= shortURL %>'>
-        <label for="newURL">New URL:</label>
-        <input type='text' id="newURL" name="newURL" placeholder="Update long URL" />
-        <button type="submit" class="btn btn-outline-primary">Submit</button>
-      </form>
+  </main>
+  <% } else { %>
+  <main>
+    <div class="card text-center">
+      <div class="card-header"></div>
+      <div class="card-body">
+        <h5 class="card-title">TinyURL for: <a href="#"><%= longURL %></a></h5>
+        <p class="card-text">Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a></p>
+      </div>
+      <div class="card-footer text-muted">
+        <h3>Edit</h3>
+        <form method='POST' action='/urls/<%= shortURL %>'>
+          <label for="newURL">New URL:</label>
+          <input type='text' id="newURL" name="newURL" placeholder="Update long URL" />
+          <button type="submit" class="btn btn-outline-primary">Submit</button>
+        </form>
+      </div>
     </div>
-  </div>
+  </main>
+  <% } %>
   <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
