--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -18,7 +18,7 @@
 
     <h1>Login</h1>
 
-    <form method="post" action="/register">
+    <form method="post" action="/login">
       <div style="width: 20em;">
         <div class="form-group">
           <label for="email">Email:</label>
