--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -39,7 +39,7 @@
           <td><a href="#"><%= url %></a></td>
           <td><%= urls[url].longURL %></td>
           <td>
-            <form method="GET" action="/urls/<%= url %>/"><button type="submit"
+            <form method="GET" action="/urls/<%= url %>?_method=DELETE"><button type="submit"
                 class="btn btn-outline-primary">Edit</button></form>
           </td>
           <td>
